--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,37 @@
+* {
+	box-sizing: border-box;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.DatesTable {
+	width: 280mm;
+	margin: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Week {
+	display: block;
 }
 
-.App-link {
-  color: #61dafb;
+.Date {
+	display: inline-block;
+	margin: 0;
+	padding: 0;
+	min-height: 36mm;
+	max-height: 36mm;
+	min-width: 40mm;
+	max-width: 40mm;
+	border: 1px solid #000;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Date.empty {
+	border: none;
+}
+
+@media print {
+	.MonthYearInput {
+		display: none;
+	}
 }
